--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -36,7 +36,7 @@ section {
   margin-top: 1vw;
   padding-bottom: 1vw;
 }
-.hide > * {
+.hide span {
   display: block;
 }
 .sc-hero .contents-area {
